--- a/src/components/Cell/Cell.css
+++ b/src/components/Cell/Cell.css
@@ -2,6 +2,6 @@
     width: 100px;
     height: 100px;
     background-color: lightpink;
-    border: 2px solid lightgrey;
+    transition: 1s all ease-in-out;
+    border: 1px solid rgb(193, 50, 74);
 }
-
